EXTRA_DIST = \
	Cmake/CMakeLists.txt Cmake/chdir_run.sh \
        Cmake/build.sh Cmake/test_java.sh \
	Cmake/CTestList.txt Cmake/CTestCustom.ctest
	
CLEANFILES = Cmake/CMakeCache.txt Cmake/cmake_install.cmake \
	Cmake/Makefile Cmake/CTestTestfile.cmake Cmake/DartConfiguration.tcl \
	Cmake/*~

clean-local:
	-rm -rf Cmake/CMakeFiles Cmake/Testing
		  
