#EXTRA_DIST = \
#	Cmake/CMakeLists.txt Cmake/chdir_run.sh \
#        Cmake/build.sh Cmake/test_java.sh \
#	Cmake/CTestList.txt Cmake/CTestConfig.cmake
	
CLEANFILES = Cmake/CMakeCache.txt Cmake/cmake_install.cmake \
	Cmake/Makefile Cmake/CTestTestfile.cmake Cmake/DartConfiguration.tcl \
	Cmake/CTestCustom.ctest Cmake/*~

clean-local:
	-rm -rf Cmake/CMakeFiles Cmake/Testing
		  
