# Copyright (c) 2004-2007. The SimGrid team. All right reserved.

# This file is part of the SimGrid project. This is free software:
# You can redistribute and/or modify it under the terms of the
# GNU LGPL (v2.1) licence.

EXTRA_DIST= platforms/prop.xml \
            platforms/metaxml.xml platforms/metaxml-random.xml

SUBDIRS= msg gras amok simdag java smpi

include $(top_srcdir)/acmacro/dist-files.mk
